# MyWeb

./: .env.example  .gitignore  DEPLOY.md  PLAN.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_bm25_index.py  0003_snapshot.py  0004_library_features.py
backend/app/: config.py  db.py  deps.py  main.py  models.py  oauth.py  ratelimit.py  schemas.py  security.py
backend/app/routers/: ask.py  auth.py  collections.py  notes.py  pages.py  search.py  stats.py  tags.py
backend/app/services/: ask.py  bm25.py  drive.py  embed.py  enrich.py  extract.py  gdocs.py  pdf.py  pipeline.py  search.py  suggest.py  summarize.py  synthesize.py  youtube.py
backend/scripts/: reembed.py  reindex.py
backend/tests/: conftest.py  test_auth.py  test_bm25.py  test_handlers.py  test_health.py  test_library.py  test_pages.py  test_search.py  test_suggest.py  test_youtube.py
backend/tests/fixtures/: sample_article.html
extension/: manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
extension/src/: background.ts
extension/src/dialog/: dialog.ts  index.html
extension/src/popup/: index.html  main.ts
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ErrorBoundary.tsx  ImportBookmarks.tsx  Layout.tsx  PageRow.tsx  ProtectedRoute.tsx  ResultCard.tsx  ui.tsx
frontend/src/lib/: api.ts  auth.tsx  constants.ts  motion.tsx  (+1 more)
(+15 files in other folders)
