[project]
name = "myweb-backend"
version = "0.1.0"
description = "MyWeb AI backend — FastAPI REST API and page-ingestion pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",
    "pydantic-settings>=2.4",
    "email-validator>=2.2",
    "pyjwt>=2.9",
    "bcrypt>=4.2",
    "authlib>=1.3",
    "httpx>=0.27",
    "itsdangerous>=2.2",
    "anthropic>=0.40",
    "trafilatura>=1.12",
    "beautifulsoup4>=4.12",
    "youtube-transcript-api>=0.6",
    "pypdf>=5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]
# Heavier local AI models — install when you want real semantic embeddings and
# NLP: `pip install -e ".[ml]"`. Without them the pipeline uses lightweight
# fallbacks so it still runs. See PLAN.md.
ml = [
    "sentence-transformers>=3.0",
    "spacy>=3.7",
    "keybert>=0.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.routers", "app.services"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
